--- a/style.css
+++ b/style.css
@@ -1,34 +1,43 @@
-* {
-  box-sizing: content-box;
-  margin: 0;
-}
+@import url('https://fonts.googleapis.com/css2?family=Sedgwick+Ave+Display&display=swap');
 
-footer, main{
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
+* {
+    box-sizing: content-box;
+    margin:0;
+    font-family: 'Sedgwick Ave Display', cursive;
+}
+body {
+    display:flex;
+    flex-direction: column;
+    min-height: 100vh;
+}
+main {
+    flex-grow: 1;
+}
+footer, main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 100vw;
 }
 iframe {
-  width: 60vw;
+    width: 60vw;
 }
-
 .about {
-  display:flex;
-  align-items: center;
-  width: 40vw;
-  text-align: center;
+    display: flex;
+    align-items: center;
+    width: 40vw;
+    text-align: center;
 }
-
 .about p {
-  width: 100%;
+    width: 100%;
 }
 
-@media (max-width: 600px){
-  footer, main{
-      flex-direction: column;
-      justify-content: center;
-      width: 100vw;
-      align-items: center;
+
+@media (max-width: 600px) {
+    footer, main {
+        width: 100vw;
+        align-items: center;
+        flex-direction: column;
+        justify-content: center
+    }
   }
-  
-}
